RESOLVED FIXED41307
[Qt] Fix QtScript build after QScriptValuePrivate ctor changes
https://bugs.webkit.org/show_bug.cgi?id=41307
Summary [Qt] Fix QtScript build after QScriptValuePrivate ctor changes
Caio Marcelo de Oliveira Filho
Reported 2010-06-28 14:54:26 PDT
[Qt] Fix QtScript build after QScriptValuePrivate ctor changes
Attachments
Patch (2.04 KB, patch)
2010-06-28 14:55 PDT, Caio Marcelo de Oliveira Filho
no flags
Caio Marcelo de Oliveira Filho
Comment 1 2010-06-28 14:55:22 PDT
Caio Marcelo de Oliveira Filho
Comment 2 2010-06-28 14:57:41 PDT
This patch also fix the build of benchmark test for QScriptEngine.
Jędrzej Nowacki
Comment 3 2010-06-29 00:21:00 PDT
Comment on attachment 59947 [details] Patch My bad, I should keep patches in sync. Looks good to me! Thanks for the fix :-)
WebKit Commit Bot
Comment 4 2010-06-29 07:32:52 PDT
Comment on attachment 59947 [details] Patch Clearing flags on attachment: 59947 Committed r62119: <http://trac.webkit.org/changeset/62119>
WebKit Commit Bot
Comment 5 2010-06-29 07:32:56 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.