2010-06-29  Caio Marcelo de Oliveira Filho  <caio.oliveira@openbossa.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Fix QtScript build after QScriptValuePrivate ctor changes
        https://bugs.webkit.org/show_bug.cgi?id=41307

        * qt/api/qscriptvalue_p.h:
        (QScriptValuePrivate::prototype):
        * qt/benchmarks/qscriptengine/qscriptengine.pro:

Canonical link: https://commits.webkit.org/53077@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62119 268f45cc-cd09-0410-ab3c-d52691b4dbfc